@@ -21,14 +21,20 @@ $_lang['setting_tiny.custom_buttons5_desc'] = 'Geben Sie die für die fünfte Ze
 $_lang['setting_tiny.custom_plugins'] = 'Zu verwendende Plugins';
 $_lang['setting_tiny.custom_plugins_desc'] = 'Eine kommaseparierte Liste der zu verwendenden TinyMCE-Plugins.';
 $_lang['setting_tiny.editor_theme'] = 'Editor-Theme';
-$_lang['setting_tiny.template_list'] = 'Template-Liste';
-$_lang['setting_tiny.template_list_desc'] = 'Geben Sie eine Liste von Templates für das Template-Plugin ein. Die Einträge müssen durch Kommata getrennt sein und das Format Name:URL:Beschreibung haben. Beispiel: MeinTemplate:assets/templates/mytemp.html:Mein eigenes Template';
+$_lang['setting_tiny.object_resizing'] = 'Objekt-Größenänderung im Editor';
+$_lang['setting_tiny.object_resizing_desc'] = 'Diese Option gibt Ihnen die Möglichkeit, die Größenänderungs-Kontrollelemente von Tabellen und Bildern in Firefox/Mozilla ein- und auszuschalten. Standardmäßig sind diese eingeschaltet.';
 $_lang['setting_tiny.path_options'] = 'Pfad-Optionen';
 $_lang['setting_tiny.path_options_desc'] = 'Mögliche Werte: "rootrelative", "docrelative" oder "fullpathurl".';
-$_lang['setting_tiny.use_uncompressed_library'] = 'Unkomprimierte Bibliothek verwenden';
-$_lang['setting_tiny.use_uncompressed_library_desc'] = 'Wenn diese Einstellung aktiviert ist, verwendet MODx nicht die komprimierte TinyMCE-JavaScript-Bibliothek. Dies verursacht mehr Last und erhöht die Ausführungszeit. Aktivieren Sie diese Einstellung nur, wenn Sie Modifikationen vornehmen möchten.';
+$_lang['setting_tiny.table_inline_editing'] = 'Tabellen-Bearbeitung';
+$_lang['setting_tiny.table_inline_editing_desc'] = 'Diese Option gibt Ihnen die Möglichkeit, die Kontrollelemente für die Inline-Bearbeitung von Tabellen in Firefox/Mozilla ein- und auszuschalten. Laut der TinyMCE-Dokumentation sind diese Kontrollelemente nicht ganz fehlerfrei und nicht änderbar, daher sind sie standardmäßig deaktiviert.';
+$_lang['setting_tiny.template_list'] = 'Template-Liste';
+$_lang['setting_tiny.template_list_desc'] = 'Geben Sie eine Liste von Templates für das Template-Plugin ein. Die Einträge müssen durch Kommata getrennt sein und das Format Name:URL:Beschreibung haben. Beispiel: MeinTemplate:assets/templates/mytemp.html:Mein eigenes Template';
+$_lang['setting_tiny.template_selected_content_classes'] = 'Template-CSS-Klassen für markierte Inhalte';
+$_lang['setting_tiny.template_selected_content_classes_desc'] = 'Geben Sie eine Liste von CSS-Klassennamen für das Template-Plugin ein. Die Einträge müssen durch Leerzeichen getrennt sein. Der Inhalt jedes Vorlagen-Elements mit einer der angegebenen CSS-Klassen wird durch die im Editor markierten Inhalte ersetzt, wenn die Vorlage eingefügt wird.';
 $_lang['setting_tiny.theme_advanced_blockformats'] = 'HTML-Blockelemente';
 $_lang['setting_tiny.theme_advanced_blockformats_desc'] = 'Diese Einstellung sollte eine kommaseparierte Liste von HTML-Blockelementen enthalten, die in dem Drop-Down-Feld "Vorlage" angezeigt werden sollen. Diese Option ist nur verfügbar, wenn das Theme "advanced" verwendet wird. Mögliche Werte sind z. B.: p, h1, h2, h3, h4, h5, h6, div, blockquote, code, pre, address.';
+$_lang['setting_tiny.use_uncompressed_library'] = 'Unkomprimierte Bibliothek verwenden';
+$_lang['setting_tiny.use_uncompressed_library_desc'] = 'Wenn diese Einstellung aktiviert ist, verwendet MODx nicht die komprimierte TinyMCE-JavaScript-Bibliothek. Dies verursacht mehr Last und erhöht die Ausführungszeit. Aktivieren Sie diese Einstellung nur, wenn Sie Modifikationen vornehmen möchten.';
 $_lang['setting_tiny.skin'] = 'TinyMCE-Skin';
 $_lang['setting_tiny.skin_desc'] = 'Diese Einstellung ermöglicht es Ihnen, anzugeben, welchen Skin Sie mit Ihrem TinyMCE-Editor-Theme verwenden möchten. Ein Skin ist im Grunde eine CSS-Datei, die aus dem Skins-Verzeichnis in das Theme geladen wird. Das Theme "advanced", das mit TinyMCE ausgeliefert wird, hat zwei Skins; diese heißen "default" und "o2k7". Wir haben einen weiteren Skin namens "cirkuit" hinzugefügt, der standardmäßig vorausgewählt ist.';
 $_lang['setting_tiny.skin_variant'] = 'TinyMCE-Skin-Variante';
