@@ -21,10 +21,18 @@ $_lang['setting_tiny.custom_buttons5_desc'] = 'Enter the buttons to use as a com
 $_lang['setting_tiny.custom_plugins'] = 'Custom Plugins';
 $_lang['setting_tiny.custom_plugins_desc'] = 'A comma-separated list of TinyMCE plugins to use.';
 $_lang['setting_tiny.editor_theme'] = 'Editor Theme';
-$_lang['setting_tiny.template_list'] = 'Template List';
-$_lang['setting_tiny.template_list_desc'] = 'Specify a list of templates for the template plugin. They must be comma-separated, and then have the format name:URL:description. For example, MyTemp:assets/templates/mytemp.html:My very own template';
+$_lang['setting_tiny.forced_root_block'] = 'Forced Root Block';
+$_lang['setting_tiny.forced_root_block_desc'] = 'This option enables you to make sure that any non block elements or text nodes are wrapped in block elements. For example <strong>something</strong> will result in output like: <p><strong>something</strong></p>.';
+$_lang['setting_tiny.object_resizing'] = 'Object Resizing';
+$_lang['setting_tiny.object_resizing_desc'] = 'This option gives you the ability to turn on/off the inline resizing controls of tables and images in Firefox/Mozilla. These are enabled by default.';
 $_lang['setting_tiny.path_options'] = 'Path Options';
 $_lang['setting_tiny.path_options_desc'] = 'Either "rootrelative", "docrelative", or "fullpathurl".';
+$_lang['setting_tiny.table_inline_editing'] = 'Table Inline Editing';
+$_lang['setting_tiny.table_inline_editing_desc'] = 'This option gives you the ability to turn on/off the inline table editing controls in Firefox/Mozilla. According to the TinyMCE documentation, these controls are somewhat buggy and not redesignable, so they are disabled by default.';
+$_lang['setting_tiny.template_list'] = 'Template List';
+$_lang['setting_tiny.template_list_desc'] = 'Specify a list of templates for the template plugin. They must be comma-separated, and then have the format name:URL:description. For example, MyTemp:assets/templates/mytemp.html:My very own template';
+$_lang['setting_tiny.template_selected_content_classes'] = 'Template Selected Content Classes';
+$_lang['setting_tiny.template_selected_content_classes_desc'] = 'Specify a list of CSS class names for the template plugin. They must be separated by spaces. Any template element with one of the specified CSS classes will have its content replaced by the selected editor content when first inserted.';
 $_lang['setting_tiny.theme_advanced_blockformats'] = 'HTML Block Elements';
 $_lang['setting_tiny.theme_advanced_blockformats_desc'] = 'This option should contain a comma separated list of formats that will be available in the format drop down list. This option is only available if the advanced theme is used.';
 
