@@ -69,7 +69,7 @@ class TinyMCE {
             'resource_browser_path' => $this->modx->getOption('manager_url',null,MODX_MANAGER_URL).'controllers/browser/index.php?',
             'skin' => 'cirkuit',
             'skin_variant' => '',
-            'table_inline_editing' => true,
+            'table_inline_editing' => false,
             'template_external_list_url' => $this->config['assetsUrl'].'template.list.php',
             'theme_advanced_disable' => '',
             'theme_advanced_resizing' => true,
@@ -83,32 +83,32 @@ class TinyMCE {
 
         /* now do user/context/system setting overrides - these must override properties */
         $this->properties = array_merge($this->properties,array(
-            'theme_advanced_blockformats' => $this->modx->getOption('tiny.theme_advanced_blockformats',$this->properties,'p,h1,h2,h3,h4,h5,h6,div,blockquote,code,pre,address'),
-            'theme_advanced_font_sizes' => $this->modx->getOption('tiny.theme_advanced_font_sizes',$this->properties,'80%,90%,100%,120%,140%,160%,180%,220%,260%,320%,400%,500%,700%'),
             'buttons1' => $this->modx->getOption('tiny.custom_buttons1',$this->properties,'undo,redo,selectall,separator,pastetext,pasteword,separator,search,replace,separator,nonbreaking,hr,charmap,separator,image,modxlink,unlink,anchor,media,separator,cleanup,removeformat,separator,fullscreen,print,code,help'),
             'buttons2' => $this->modx->getOption('tiny.custom_buttons2',$this->properties,'bold,italic,underline,strikethrough,sub,sup,separator,bullist,numlist,outdent,indent,separator,justifyleft,justifycenter,justifyright,justifyfull,separator,styleselect,formatselect,separator,styleprops'),
             'buttons3' => $this->modx->getOption('tiny.custom_buttons3',$this->properties,''),
             'buttons4' => $this->modx->getOption('tiny.custom_buttons4',$this->properties,''),
             'buttons5' => $this->modx->getOption('tiny.custom_buttons5',$this->properties,''),
             'css_path' => $this->modx->getOption('editor_css_path',$this->properties,''),
+            'forced_root_block' => $this->modx->getOption('tiny.forced_root_block',$this->properties,false),
+            'language' => $this->modx->getOption('manager_language',null,$this->modx->getOption('cultureKey',null,'en')),
+            'object_resizing' => $this->modx->getOption('tiny.object_resizing',$this->properties,true),
+            'path_options' => $this->modx->getOption('tiny.path_options',$this->properties,''),
             'plugins' => $this->modx->getOption('tiny.custom_plugins',$this->properties,'style,advimage,advlink,modxlink,searchreplace,print,contextmenu,paste,fullscreen,noneditable,nonbreaking,xhtmlxtras,visualchars,media'),
+            'skin' => $this->modx->getOption('tiny.skin',$this->properties,'cirkuit'),
+            'skin_variant' => $this->modx->getOption('tiny.skin_variant',$this->properties,''),
+            'table_inline_editing' => $this->modx->getOption('tiny.table_inline_editing',$this->properties,false),
+            'template_selected_content_classes' => $this->modx->getOption('tiny.template_selected_content_classes',$this->properties,''),
             'theme' => $this->modx->getOption('tiny.editor_theme',$this->properties,'advanced'),
-            'theme_advanced_styles' => $this->modx->getOption('tiny.css_selectors',$this->properties,''),
+            'theme_advanced_blockformats' => $this->modx->getOption('tiny.theme_advanced_blockformats',$this->properties,'p,h1,h2,h3,h4,h5,h6,div,blockquote,code,pre,address'),
             'theme_advanced_buttons1' => $this->modx->getOption('tiny.custom_buttons1',$this->properties,'undo,redo,selectall,separator,pastetext,pasteword,separator,search,replace,separator,nonbreaking,hr,charmap,separator,image,modxlink,unlink,anchor,media,separator,cleanup,removeformat,separator,fullscreen,print,code,help'),
             'theme_advanced_buttons2' => $this->modx->getOption('tiny.custom_buttons2',$this->properties,'bold,italic,underline,strikethrough,sub,sup,separator,bullist,numlist,outdent,indent,separator,justifyleft,justifycenter,justifyright,justifyfull,separator,styleselect,formatselect,separator,styleprops'),
             'theme_advanced_buttons3' => $this->modx->getOption('tiny.custom_buttons3',$this->properties,''),
             'theme_advanced_buttons4' => $this->modx->getOption('tiny.custom_buttons4',$this->properties,''),
             'theme_advanced_buttons5' => $this->modx->getOption('tiny.custom_buttons5',$this->properties,''),
+            'theme_advanced_font_sizes' => $this->modx->getOption('tiny.theme_advanced_font_sizes',$this->properties,'80%,90%,100%,120%,140%,160%,180%,220%,260%,320%,400%,500%,700%'),
+            'theme_advanced_styles' => $this->modx->getOption('tiny.css_selectors',$this->properties,''),
             'toolbar_align' => $this->modx->getOption('manager_direction',$this->properties,'ltr'),
             'use_browser' => $this->modx->getOption('use_browser',$this->properties,true),
-            'path_options' => $this->modx->getOption('tiny.path_options',$this->properties,''),
-            'language' => $this->modx->getOption('manager_language',null,$this->modx->getOption('cultureKey',null,'en')),
-
-            'skin' => $this->modx->getOption('tiny.skin',$this->properties,'cirkuit'),
-            'skin_variant' => $this->modx->getOption('tiny.skin_variant',$this->properties,''),
-            'object_resizing' => $this->modx->getOption('tiny.object_resizing',$this->properties,true),
-            'table_inline_editing' => $this->modx->getOption('tiny.table_inline_editing',$this->properties,true),
-            'template_selected_content_classes' => $this->modx->getOption('tiny.template_selected_content_classes',$this->properties,''),
         ));
     }
 
